--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docker:build": "docker build -t cats-frontend .",
+    "docker:build:dev": "docker build -f Dockerfile.dev -t cats-frontend-dev .",
+    "docker:run": "docker run -p 80:80 cats-frontend",
+    "docker:run:dev": "docker run -p 4200:4200 -v $(pwd):/app -v /app/node_modules cats-frontend-dev",
+    "docker:compose:up": "docker-compose up",
+    "docker:compose:up:dev": "docker-compose --profile dev up frontend-dev",
+    "docker:compose:down": "docker-compose down"
   },
   "prettier": {
     "printWidth": 100,
